Fixed alignment of section times with section number for 768px width view on the selected courses view.

--- a/static/global/scss/768.scss
+++ b/static/global/scss/768.scss
@@ -252,6 +252,7 @@ body {
         .days {
             font-size: 100%;
             margin: 0;
+            padding-left: 17px;
             display: block;
             clear: both;
             li {
